--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -234,8 +234,12 @@
                       (ionChange)="this.dateChanged('end',datetime.value , i, $event)"
                       showDefaultButtons="true"
                       (ionCancel)="this.datePickersInfo[i]?.end.open = false"
-                      [min]="datePickersInfo?.[i]?.start?.formatedValue"
+                      [min]="datePickersInfo?.[i]?.start?.formatedValue || '2000-01-01T00:00:00'"
+                      max="2500-01-01T00:00:00"
                     >
+                      <!-- 
+                      datePickersInfo?.[i]?.start?.formatedValue == '' ?
+                     -->
                       <span slot="title">Select an end date</span>
                     </ion-datetime>
                     <ion-input
@@ -373,7 +377,9 @@
           this.searchFilterForm,
           this.preSelectList,
           this.currentPresetName
-        ); modal.dismiss('Cross click')"
+        ); 
+        modal.dismiss('Cross click')
+        "
         class="btn btn-outline-dark"
       >
         Save
