adding style on for mobile(2 of august)

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -204,6 +204,7 @@
                         showDefaultButtons="true"
                         (ionCancel)="this.datePickersInfo[i].start.open = false"
                         min="2000-01-01T00:00:00"
+                        id="test1"
                       >
                         <span slot="title">Select a start date</span>
                       </ion-datetime>
