--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -560,5 +560,28 @@ ion-datetime {
 }
 
 
+// .ios  {
+//   color: black;
+// }
+// @media screen() {
+  
+// }
+// @media(max-width: 375px) {
+  .form-wrapper {
+    position: relative;
+  }
+  // .md form{
+  //    position: relative;
+  // }
+  #test1 {
+    z-index: 1000;
+    color: blue;
+    position: absolute;
+    top: -2rem;
+  }
+  
+// }
+
+
 
 
