--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -97,7 +97,8 @@
                 class="example-list"
               >
                 <ion-row
-                  *ngFor="let quantity of allSearch()?.controls; let i = index"
+                  *ngFor="let quantity of allSearch()?.controls; let i = index ;
+                  "
                   [formGroupName]="i"
                   class="example-box"
                 >
@@ -142,7 +143,6 @@
                       formControlName="param1"
                       [ngClass]="(!allSearch().controls[i].get('param1').valid && submitted) ? 'error' : ''"
                       (change)="onParam1Change(i)"
-                      onchange=""
                     >
                       <option disabled selected value>select an option</option>
                       <option
@@ -156,7 +156,7 @@
                   </ion-col>
                   <ion-col size-lg="3" size-md="4" size-sm="3" size-xl="2">
                     <select
-                      class="select-class"
+                      class="select-class disableSelect"
                       formControlName="param2"
                       onselect=""
                       (change)="onParam2Change(i,true)"
@@ -170,6 +170,9 @@
                         {{p2.name}}
                       </option>
                     </select>
+                    <ng-template #kkkk>
+                      <p>Hello</p>
+                    </ng-template>
                   </ion-col>
                   <ion-col size-xs="12" size-sm="" class="input-wrapper">
                     <ion-input
