Fixing the Save new preset when enter and cancel then update preset stay disable (4 of august)

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -336,7 +336,6 @@
                   >
                     Update Current Preset
                   </button>
-                  <!-- Update Current Preset -->
                 </li>
                 <li
                   class="dropdown-item"
@@ -398,7 +397,7 @@
           this.preSelectList,
           this.currentPresetName
         ); 
-        modal.dismiss('Cross click')
+        modal.dismiss('button')
         "
         class="btn btn-outline-dark"
       >
