--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -78,12 +78,9 @@ ion-input {
 .list {
   background: transparent;
   height: 84vh;
-  // width: 100%;
-  // height: 100%;
   overflow: hidden;
   padding-bottom: 2rem;
   position: relative;
-  // margin: 0;
 
 }
 
@@ -576,7 +573,12 @@ ion-datetime {
   opacity: 0.5;
   cursor: not-allowed;
 }
-
+.save-button:disabled,
+.save-button:disabled[disabled] {
+  background-color: grey;
+  opacity: 0.5;
+  cursor: not-allowed;
+}
   .form-wrapper {
     position: relative;
   }
@@ -594,6 +596,14 @@ ion-datetime {
    .ion-datetime-end {
     top: -5rem;
    }
+}
+
+@media only screen and (max-height: 780px) {
+  .list {
+    position: relative;
+    height: 78vh;
+   }
+  
 }
  
 
