Fixing bugs and issue(08 August)

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -371,7 +371,7 @@
           <input
             clearInput
             class="input-box form-control"
-            placeholder="Enter search name"
+            placeholder="Enter preset name"
             [(ngModel)]="currentPresetName"
           />
         </div>
