--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -584,6 +584,9 @@ ion-datetime {
   }
 
 
+
+
+
 @media only screen and (max-width: 600px) {
   .list {
     position: relative;
@@ -606,7 +609,9 @@ ion-datetime {
   
 }
  
-
+// .alert-1-msg {
+//   background-color: #008000;
+// }
 
 
 
