--- a/src/global.scss
+++ b/src/global.scss
@@ -49,4 +49,10 @@ body {
     /* left: calc(50% - 49px); */
     transform: translate(-50%, -50%);
   }
-  
+
+.alert-confirmation {
+    b {
+      color: rgb(66, 63, 63);
+      margin: 0; 
+    }
+  }
